Fix typos in character descriptions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -147,7 +147,7 @@ Osborne was also an author and book publisher."
     <string name="cernettes">
 "Les Horribles Cernettes, or LHC, are the High Energy Rock Band of the European research facility CERN. They also were The First Band On The Web.
 
-After Berners-Lee had invented the World Wide Web, he was looking for some content to put into it. Silvano de Gennaro provided him with a photo of the Cernettes taken in july 1992, which became the first photo of a band that appeared in browser windows all over the world."
+After Berners-Lee had invented the World Wide Web, he was looking for some content to put into it. Silvano de Gennaro provided him with a photo of the Cernettes taken in July 1992, which became the first photo of a band that appeared in browser windows all over the world."
     </string>
     <string name="knuth">"Donald Ervin Knuth is a computer scientist and mathematician who has made numerous contributions to theoretical computer science.  He is mostly known for the monumental work “The Art of Computer Programming”, a project that started in 1962 and is still not finished. For this he created en passant the TeX formatting system that has become the standard for scientific publications all over the world."</string>
     <string name="zuse">
@@ -158,7 +158,7 @@ Zuse also created the first high-level programming language “Plankalkül”."
     <string name="franke">
 "Herbert W. Franke was a physicist well known as an author of science fiction novels and documentary works.
 
-He was a pionier in the field of computer art and computer graphics, and developed the concept of “cybernetical aesthetics” - art created by electronic devices and numerical algorithms."
+He was a pioneer in the field of computer art and computer graphics, and developed the concept of “cybernetical aesthetics” - art created by electronic devices and numerical algorithms."
     </string>
     <string name="vaughan">
 "Dorothy Vaughan was one of the “human computers” working with the NASA. She was capable of solving complex mathematical equations faster and more reliably than the electronic or mechanical devices available at the time. With other women, she significantly helped advancing the American space program.
